# rust-xmpp-server-stream

./: COPYING  Cargo.toml  README.md
src/example/: server.rs
src/xmpp/: lib.rs  server_handler.rs  server_stream.rs  xmpp_socket.rs
