[package]

name = "rust-xmpp-server-stream"
version = "0.0.0"
authors = [
    "florob@babelmonkeys.de"
]

[[bin]]

name = "rust-server"
path = "src/example/server.rs"


[[lib]]

name = "xmpp"
path = "src/xmpp/lib.rs"

[dependencies.RustyXML]

git = "https://github.com/Florob/RustyXML"

[dependencies.openssl]

git = "https://github.com/sfackler/rust-openssl"
